// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-bkSjNy llfJnn"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-bkSjNy llfJnn"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-bkSjNy llfJnn"
>
  <span
    className="sc-kbXUY iYkimx"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-bkSjNy llfJnn"
>
  <div
    className="sc-fMjwjh tFTpL"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-bkSjNy hGJMzS"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-bkSjNy hbSVQm"
  size="small"
/>
`;
